--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div>
           <p class="balance__label">Current balance</p>
           <p class="balance__date">
-            As of <span class="date">05/03/2037</span>
+            As of <span class="date">05/03/2020</span>
           </p>
         </div>
-        <p class="balance__value">0000€</p>
+        <p class="balance__value">€ 0000</p>
       </div>
 
       <!-- MOVEMENTS -->
@@ -59,7 +59,7 @@
           <div class="movements__type movements__type--withdrawal">
             1 withdrawal
           </div>
-          <div class="movements__date">24/01/2037</div>
+          <div class="movements__date">24/01/2020</div>
           <div class="movements__value">-378€</div>
         </div>
       </div>
